--- a/styles/header.css
+++ b/styles/header.css
@@ -12,6 +12,7 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
+    position: relative;
 }
 
 .container {
@@ -22,3 +23,36 @@
 .container-img {
     padding: 1em;
 }
+
+.lista-menu{
+    display: none;
+    position: absolute;
+    top: 100%;
+}
+
+.container-botao{
+    display: none;
+}
+
+.container-botao:checked~.lista-menu{
+    display: block;
+}
+
+.lista-menu-titulo, .lista-menu-item {
+    padding: 1em;
+    background-color: var(--branco);
+}
+
+.lista-menu-titulo{
+    color: var(--laranja);
+    width: 60vw;
+    font-weight: 700;
+}
+
+.lista-menu-link{
+    color: var(--azul-degrade);
+    -webkit-background-clip: text;
+    /*-webkit-text-fill-color: transparent;*/
+    background-clip: text;
+    text-transform: uppercase;
+    text-decoration: none;
